--- a/ex1/styles/style.css
+++ b/ex1/styles/style.css
@@ -1,3 +1,43 @@
-p {
-    color: red;
+html {
+    font-size: 10px;
+    font-family: 'Open Sans', sans-serif;
+  }
+  
+  
+  h1 {
+    font-size: 60px;
+    text-align: center;
+  }
+  
+  p, li {
+    font-size: 16px;
+    line-height: 2;
+    letter-spacing: 1px;
+  }
+  
+  
+  html {
+    background-color: #00eeff;
+  }
+  
+  body {
+    width: 600px;
+    margin: 0 auto;
+    background-color: #00eeff;
+    padding: 0 20px 20px 20px;
+    border: 5px solid rgb(252, 0, 252);
+  }
+  
+  h1 {
+    margin: 0;
+    padding: 20px 0;
+    color: #6756c5;
+    text-shadow: 3px 3px 1px black;
+  }
+  
+ img  {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+   height: 550px;
   }
